@@ -1,12 +1,13 @@
 package com.leeminjung1.domain.application;
 
 import com.leeminjung1.domain.model.member.Member;
-import com.leeminjung1.domain.model.member.MemberRole;
+import com.leeminjung1.domain.model.member.Privilege;
 import com.leeminjung1.domain.model.member.Role;
-import com.leeminjung1.infrastructure.repository.JpaMemberRepository;
-import lombok.RequiredArgsConstructor;
+import com.leeminjung1.infrastructure.repository.MemberRepository;
+import com.leeminjung1.infrastructure.repository.RoleRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Bean;
+import org.springframework.context.MessageSource;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -14,22 +15,62 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Stream;
+import javax.transaction.Transactional;
+import java.util.*;
 
-@Service
+@Service("userDetailsService")
+@Transactional
 public class BackedLoginService implements UserDetailsService {
 
     @Autowired
-    private JpaMemberRepository memberRepository;
+    private MemberRepository memberRepository;
+
+    @Autowired
+    private MessageSource messages;
+
+    @Autowired
+    private RoleRepository roleRepository;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Member user = memberRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다."));
 
-        return new User(user.getUsername(), user.getPassword(), List.of(new SimpleGrantedAuthority("USER")));
+        Member member = memberRepository.findByUsername(username).orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다."));;
+        if (member == null) {
+            return new org.springframework.security.core.userdetails.User(
+                    " ", " ", true, true, true, true,
+                    getAuthorities(Arrays.asList(
+                            roleRepository.findByName("ROLE_USER"))));
+        }
+
+        return new org.springframework.security.core.userdetails.User(
+                member.getEmail(), member.getPassword(), getAuthorities(member.getRoles()));
+    }
+
+    private Collection<? extends GrantedAuthority> getAuthorities(
+            Collection<Role> roles) {
+
+        return getGrantedAuthorities(getPrivileges(roles));
+    }
+
+    private List<String> getPrivileges(Collection<Role> roles) {
+
+        List<String> privileges = new ArrayList<>();
+        List<Privilege> collection = new ArrayList<>();
+        for (Role role : roles) {
+            privileges.add(role.getName());
+            collection.addAll(role.getPrivileges());
+        }
+        for (Privilege item : collection) {
+            privileges.add(item.getName());
+        }
+        return privileges;
+    }
+
+    private List<GrantedAuthority> getGrantedAuthorities(List<String> privileges) {
+        List<GrantedAuthority> authorities = new ArrayList<>();
+        for (String privilege : privileges) {
+            authorities.add(new SimpleGrantedAuthority(privilege));
+        }
+        return authorities;
     }
 }
